--- a/departments-dev.yaml
+++ b/departments-dev.yaml
@@ -3,7 +3,7 @@ server:
 spring:
     datasource:
         password: root
-        url: jdbc:mysql://localhost:3306/deptdatabase?useSSL=false
+        url: jdbc:mysql://localhost:3306/employeedb
         username: root
     jpa:
         hibernate:
