--- a/departments-dev.yaml
+++ b/departments-dev.yaml
@@ -2,9 +2,9 @@ server:
     port: 8081
 spring:
     datasource:
-        password: root
         url: jdbc:mysql://localhost:3306/employeedb
         username: root
+        password: root@123
     jpa:
         hibernate:
             ddl-auto: update
