--- a/departments-dev.yaml
+++ b/departments-dev.yaml
@@ -16,7 +16,7 @@ spring:
 # Test Details for Development Environment
 test:
   details: Department service details for development environment [From GitHub]
-  engineer: John Doe01
+  engineer: Mathew Mebin
   department: Development Testing [Dept service]
   engineerContact:
     email: testengineer01.dev@example.com
