--- a/address-dev.yaml
+++ b/address-dev.yaml
@@ -2,7 +2,7 @@ server:
     port: 8081
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/employeedb
+        url: jdbc:mysql://localhost:3306/addressdb
         username: root
         password: root@123
     jpa:
