--- a/address-prod.yaml
+++ b/address-prod.yaml
@@ -2,9 +2,9 @@ server:
     port: 8081
 spring:
     datasource:
-        password: root
-        url: jdbc:mysql://localhost:3306/deptdatabase?useSSL=false
+        url: jdbc:mysql://localhost:3306/addressdb
         username: root
+        password: root@123
     jpa:
         hibernate:
             ddl-auto: update
