--- a/address-service-dev.yaml
+++ b/address-service-dev.yaml
@@ -15,9 +15,7 @@ spring:
       
 # Test Details for Development Environment
 test:
-  details: Department service details for development environment [From GitHub]
-  engineer: Mathew Mebin
-  department: Development Testing [Dept service]
-  engineerContact:
-    email: testengineer01.dev@example.com
-    phone: 111-456-7890       
+  details: Address details for dev environment [From GitHub]
+  employee: Mathew Mebin
+  city: Kottayam
+  state: Kerala
