--- a/employee-service-prod.yaml
+++ b/employee-service-prod.yaml
@@ -14,9 +14,7 @@ spring:
                 
 # Test Details for Production Environment
 test:
-  details: Employee service details for production environment [From GitHub]
-  engineer: Alice Johnson
-  department: Production Testing
-  engineerContact:
-    email: testengineer.prd@example.com
-    phone: 555-123-4567
+  details: Employee details for prod environment from GitHub
+  employee: Katie Ellen
+  email: ke@test.com   
+  age: 21
